Fix an autoreplace bug and enable escaping

Make it so we can do multiple replaces in a single line again by
not replacing the content of the 'global' replace variable
BUG:211632

Make it so we can support %# in replacements  without it getting
lost in regex land by allowing escaping (with %%#).If you're so
inclined please review the big comment explaining why we can't
just not remove the leftover %# to make sure I'm not shooting hot
air.
BUG:218332